Add message for unsupported server version

--- a/core/src/main/resources/messages.yml
+++ b/core/src/main/resources/messages.yml
@@ -25,6 +25,7 @@ PlayerNotFound: "&cThat Player is not found or is not online!"
 PlayerNotFound2: "&cOne of the players are not online!"
 SenderNotPlayer: "You are not a fucking player!"
 SpecifyTarget: "You must specify the target"
+ServerVersionUnsupported: "Sorry, %version% is unsupported."
 NoSuchWorld: "Unknown world"
 NoSuchCommand: "Unknown command"
 NoPerms: "&4You have no power here..."
