--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -34,6 +34,9 @@ commands:
   spawn:
     usage: A
     description: A
+  signedit:
+    usage: A
+    description: A
   tpa:
     usage: A
     description: A
