--- a/bukkit-1.13-legacy/pom.xml
+++ b/bukkit-1.13-legacy/pom.xml
@@ -9,14 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xiavic-bukkit-1.15</artifactId>
-    <name>Xiavic-Bukkit-1.15</name>
-
+    <artifactId>xiavic-bukkit-1.13-legacy</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
-            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <version>1.13.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
