--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <module>core</module>
         <module>bukkit-1.15</module>
         <module>jar-builder</module>
+        <module>bukkit-1.14</module>
+        <module>bukkit-1.13</module>
+        <module>bukkit-1.13-legacy</module>
     </modules>
 
     <description>A</description>
