--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,21 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>xavic-bukkit-1.15</artifactId>
-    <name>Xavic-Bukkit-1.15</name>
+    <artifactId>xiavic-bukkit-1.15</artifactId>
+    <name>Xiavic-Bukkit-1.15</name>
 
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot</artifactId>
             <version>1.15.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.prypurity</groupId>
             <artifactId>core</artifactId>
             <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
