--- a/bukkit-1.13-legacy/pom.xml
+++ b/bukkit-1.13-legacy/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>xiavic-bukkit-1.13-legacy</artifactId>
+    <name>xiavic-bukkit-1.13-legacy</name>
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
