--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jar-builder</module>
         <module>XiavicLib</module>
         <module>XiavicEssentials</module>
+        <module>nms/bukkit-1.16</module>
         <module>nms/bukkit-1.15</module>
         <module>nms/bukkit-1.14</module>
         <module>nms/bukkit-1.13</module>
