Bug Fixes & ACF Porting Part #1
Teleportation Rewrite, Message Handling , ACF Tab Completion is now Fixed, Added Commands to plugin.yml, Removed Deprecated Methods, Restructured messages.yml to match the correct formatting. Removed Duplicate of TeleportImmunity

--- a/XiavicEssentials/src/main/resources/messages.yml
+++ b/XiavicEssentials/src/main/resources/messages.yml
@@ -19,164 +19,168 @@
 Version: 1
 
 # Economy
-economy.account: "&2Your account balance is currently &e%money%."
-economy.deposit: "&2You have had %amount% added to your account."
-economy.pay: "&2You have paid %amount% to %target%"
-economy.withdraw: "&2You have had %amount% removed from your account."
-economy.balance-reset: "&2&lYour balance has been reset!"
-economy.balance-set: "&2Your balance was set to, %amount%"
-economy.eco-top:
-  1: "&2Top 5 Players:"
-  2: "&1First: %player1%"
-  3: "&1Second: %player2%"
-  4: "&1Third: %player3%"
-  5: "&1Fourth: %player4%"
-  6: "&1Fifth: %player5%"
+economy:
+  account: "&2Your account balance is currently &e%money%."
+  deposit: "&2You have had %amount% added to your account."
+  pay: "&2You have paid %amount% to %target%"
+  withdraw: "&2You have had %amount% removed from your account."
+  balance-reset: "&2&lYour balance has been reset!"
+  balance-set: "&2Your balance was set to, %amount%"
+  eco-top:
+    1: "&2Top 5 Players:"
+    2: "&1First: %player1%"
+    3: "&1Second: %player2%"
+    4: "&1Third: %player3%"
+    5: "&1Fourth: %player4%"
+    6: "&1Fifth: %player5%"
 
 # Common
-messages.prefix: "[Xiavic]"
-messages.invalid-arguments: "&cInvalid Arguments: %reason%"
-messages.unknown-player: "&c%player% is not online!"
-messages.vararg-unknown-player: "&cOne of the players are not online!"
-messages.sender-not-player: "&cYou are not a fucking player!"
-messages.specify-target: "&cYou must specify the target"
-messages.unsupported-server: "&cSorry, your server version, %version%, is unsupported."
-messages.unknown-world: "&cUnknown world"
-messages.unknown-command: "&cUnknown command"
-messages.no-permission: "&4You have no power here..."
-messages.plugin-enabled: "Enabled... bitch"
-messages.plugin-disabled: "Disabled... bitch"
-messages.value-true: "Skeet skeet mudafuka"
-messages.value-false: "False... usuk"
-messages.quit: "&8[&c-&8] &c%player%"
-messages.rejoin: "&8[&6+&8] &e%player%"
+messages:
+  prefix: "[Xiavic]"
+  invalid-arguments: "&cInvalid Arguments: %reason%"
+  unknown-player: "&c%player% is not online!"
+  vararg-unknown-player: "&cOne of the players are not online!"
+  sender-not-player: "&cYou are not a fucking player!"
+  specify-target: "&cYou must specify the target"
+  unsupported-server: "&cSorry, your server version, %version%, is unsupported."
+  unknown-world: "&cUnknown world"
+  unknown-command: "&cUnknown command"
+  no-permission: "&4You have no power here..."
+  plugin-enabled: "Enabled... bitch"
+  plugin-disabled: "Disabled... bitch"
+  value-true: "Skeet skeet mudafuka"
+  value-false: "False... usuk"
+  quit: "&8[&c-&8] &c%player%"
+  rejoin: "&8[&6+&8] &e%player%"
 
-messages.item-is-air: "&cYou are holding air, not an item..."
-messages.invalid-number: "Only whole numbers between 1-10 may be chosen."
-messages.player-frozen: "&c&lYou are still frozen, please contact a server administrator to be un-frozen!"
-messages.inventory-full: "&cYou have a full inventory. Please free up some space!"
-messages.first-join: "&eWelcome to the development server, &e&l%player%, &aonly those with authorized access may use this server.!"
-messages.what-is-this: "What a terrible night for a curse..."
-messages.what-is-this-target: "You have cursed %target%."
-messages.sign-too-many-lines: "&eYou have provided too many lines: %lines%"
-messages.sign-too-many-characters: "&eToo many characters Max = 15, Provided: %length%"
-messages.sign-edit-failure: "&eFailed to edit this sign!"
-messages.look-at-sign: "&cYou must be looking at a sign!"
-messages.item-repaired: "&aItem Repaired!"
-messages.item-repair-failure: "&cThis item cannot be repaired."
-messages.player-afk: "%player% is now AFK"
-messages.player-not-afk: "%player% is no longer AFK"
-# Vanish
-messages.vanish-enabled: "Vanished"
-messages.vanish-disabled: "Visible"
-# High Staff
-messages.config-updated: "&8[&cDebug&8] &7The config files have been updated!"
-messages.config-version: "&8[&cDebug&8] &7The current running version is %version%..."
-messages.database-error: "Connection was NOT set-up properly. Please double check your database settings. :("
-# Fun
-messages.heads: "Heads"
-messages.tails: "Tails"
+  item-is-air: "&cYou are holding air, not an item..."
+  invalid-number: "Only whole numbers between 1-10 may be chosen."
+  player-frozen: "&c&lYou are still frozen, please contact a server administrator to be un-frozen!"
+  inventory-full: "&cYou have a full inventory. Please free up some space!"
+  first-join: "&eWelcome to the development server, &e&l%player%, &aonly those with authorized access may use this server.!"
+  what-is-this: "What a terrible night for a curse..."
+  what-is-this-target: "You have cursed %target%."
+  sign-too-many-lines: "&eYou have provided too many lines: %lines%"
+  sign-too-many-characters: "&eToo many characters Max = 15, Provided: %length%"
+  sign-edit-failure: "&eFailed to edit this sign!"
+  look-at-sign: "&cYou must be looking at a sign!"
+  item-repaired: "&aItem Repaired!"
+  item-repair-failure: "&cThis item cannot be repaired."
+  player-afk: "%player% is now AFK"
+  player-not-afk: "%player% is no longer AFK"
+
+  # Vanish
+  vanish-enabled: "Vanished"
+  vanish-disabled: "Visible"
+
+  # High Staff
+  config-updated: "&8[&cDebug&8] &7The config files have been updated!"
+  config-version: "&8[&cDebug&8] &7The current running version is %version%..."
+  database-error: "Connection was NOT set-up properly. Please double check your database settings. :("
+
+  # Fun
+  heads: "Heads"
+  tails: "Tails"
 
 # TP
-teleport.forced-teleport: "You are being teleported!"
-teleport.teleported: "%target1% has been teleported to %target2%"
-teleport.teleported-all: "Teleporting all players to %target%, I'm sure they'll be happy about it"
-teleport.teleported-spawn: "You have been successfully teleported to spawn."
-teleport.teleport-disabled: "%target% has teleportation disabled!"
-teleport.teleport-request-sent: "You have sent a teleport request to %target%"
-teleport.teleport-self: "You cannot teleport to yourself, idiot."
-teleport.teleport-requested: "%sender% has requested to teleport to you"
-teleport.teleport-request-acccepted: "%target% has accepted your teleport request. You will be teleported in %time% seconds."
-teleport.teleport-accepted: "You have accepted %sender%'s request"
-teleport.teleport-request-denied: "%target% has denied your teleport request. You fucking suck."
-teleport.teleport-denied: "You have denied %sender%'s request"
-teleport.teleport-cooldown: "You must wait %time% seconds until you can tpa again."
-teleport.teleport-pending: "You already have a request pending. Pendejo"
-teleport.teleport-toggled-off: "You have DISABLED teleport requests to you. Pathetic..."
-teleport.teleport-toggled-on: "You have ENABLED teleport requests to you."
-teleport.random-teleport: "You have been randomly teleported. Don't have too much fun!"
-teleport.failure: "Teleportation has failed you once again!"
-teleport.teleporting-previous: "Returning to your last location"
-teleport.no-previous-location: "You do not have a recent location to go back to"
-teleport.no-pending-requests: "You do not have any teleport requests..."
-teleport.teleported-world: "&bYou have been teleported to the spawn of %world%"
+teleport:
+  forced-teleport: "You are being teleported!"
+  teleported: "%target1% has been teleported to %target2%"
+  teleported-all: "Teleporting all players to %target%, I'm sure they'll be happy about it"
+  teleported-spawn: "You have been successfully teleported to spawn."
+  teleport-disabled: "%target% has teleportation disabled!"
+  teleport-request-sent: "You have sent a teleport request to %target%"
+  teleport-self: "You cannot teleport to yourself, idiot."
+  teleport-requested: "%sender% has requested to teleport to you"
+  teleport-request-acccepted: "%target% has accepted your teleport request. You will be teleported in %time% seconds."
+  teleport-accepted: "You have accepted %sender%'s request"
+  teleport-request-denied: "%target% has denied your teleport request. You fucking suck."
+  teleport-denied: "You have denied %sender%'s request"
+  teleport-cooldown: "You must wait %time% seconds until you can tpa again."
+  teleport-pending: "You already have a request pending. Pendejo"
+  teleport-toggled-off: "You have DISABLED teleport requests to you. Pathetic..."
+  teleport-toggled-on: "You have ENABLED teleport requests to you."
+  random-teleport: "You have been randomly teleported. Don't have too much fun!"
+  failure: "Teleportation has failed you once again!"
+  teleporting-previous: "Returning to your last location"
+  no-previous-location: "You do not have a recent location to go back to"
+  no-pending-requests: "You do not have any teleport requests..."
+  teleported-world: "&bYou have been teleported to the spawn of %world%"
 
 
 # utils.Listeners
-commands.inventory-clear: "&7Your inventory has just been cleared. Hopefully you didn't have any God-like items on you!"
-commands.inventory-clear-other: "%target%'s inventory has been cleared!"
-commands.enderchest: "Opening your ender chest..."
-commands.enderchest-other: "Opening %target%'s ender chest..."
-commands.feed: "Your hunger seems to have subsided for now..."
-commands.feed-all: "Everyone has been fed..."
-commands.feed-other: "%target% has been fed"
-commands.fly: "Flying has been %mode%"
-commands.fly-other: "Flying for %target%, has been %mode%"
-commands.gamemode: "Your gamemode has been updated to %mode%"
-commands.gamemode-other: "%target%'s gamemode has been updated to %mode%"
-commands.god: "Your godmode has been %mode%"
-commands.god-other: "Godmode for %player% has been %mode%"
-commands.heal: "&eYou have been healed."
-commands.heal-all: "You have healed everyone!"
-commands.heal-other: "%target% has been healed!"
-commands.respawn-toggle: "You have toggled instant respawn to %mode%"
-commands.set-first-join: "&e&lThe First-join Spawn Point has been set"
-commands.set-spawn: "&eSpawn has been successfully set."
-commands.show-weather: "&eThe server's current weather is, &c%weather%"
-commands.weather: "&aYou have changed the weather to, &e%weather%"
-commands.dynamic-sign-edit-toggled: "&aDynamic Sign Editing is now %state%"
-commands.sign-edited: "&bThe sign has been edited."
-commands.vanish: "You are now %mode%"
-commands.vanish-target: "%target% is now %mode%"
-commands.whois-basic: "%nickname% is %username%"
+commands:
+  inventory-clear: "&7Your inventory has just been cleared. Hopefully you didn't have any God-like items on you!"
+  inventory-clear-other: "%target%'s inventory has been cleared!"
+  enderchest: "Opening your ender chest..."
+  enderchest-other: "Opening the ender chest of %target%..."
+  feed: "Your hunger seems to have subsided for now..."
+  feed-all: "Everyone has been fed..."
+  feed-other: "%target% has been fed"
+  fly: "Flying has been %mode%"
+  fly-other: "Flying for %target%, has been %mode%"
+  gamemode: "Your gamemode has been updated to %mode%"
+  gamemode-other: "%target%'s gamemode has been updated to %mode%"
+  god: "Your godmode has been %mode%"
+  god-other: "Godmode for %player% has been %mode%"
+  heal: "&eYou have been healed."
+  heal-all: "You have healed everyone!"
+  heal-other: "%target% has been healed!"
+  respawn-toggle: "You have toggled instant respawn to %mode%"
+  set-first-join: "&e&lThe First-join Spawn Point has been set"
+  set-spawn: "&eSpawn has been successfully set."
+  show-weather: "&eThe server's current weather is, &c%weather%"
+  weather: "&aYou have changed the weather to, &e%weather%"
+  dynamic-sign-edit-toggled: "&aDynamic Sign Editing is now %state%"
+  sign-edited: "&bThe sign has been edited."
+  vanish: "You are now %mode%"
+  vanish-target: "%target% is now %mode%"
+  whois-basic: "%nickname% is %username%"
 
-# How 2 Use Messages a.k.a. Help Text
-commands.whois-help: "/whois <player>"
+  whois-help: "/whois <player>"
 
+  cheat-exp: "&8[&cDebug&8] &7Your Exp has been set to 9999 levels."
+  cheat-armor: "&8[&cDebug&8] &7You have been given the CheatArmor set!"
 
-# Cheat
-commands.cheat-exp: "&8[&cDebug&8] &7Your Exp has been set to 9999 levels."
-commands.cheat-armor: "&8[&cDebug&8] &7You have been given the CheatArmor set!"
-
-
-# Fun
-commands.annoy: "&4&l&oANNOYANCE"
-commands.argh: "&bArghhh, Piratey treasure awaits at yee spawn!"
-messages.head-slot-taken: "&cYou already have something on your head!"
-commands.pony: "%PonyPerson% &rsays: %Random_Pony%" #Sorry not sorry pickle, but i'm bringing it back, just for you, <3
-messages.pony-person: "PickleGodLordOmegaLul"
-commands.walkspeed: "Your walkspeed has been set to, %amount%"
-commands.flyspeed: "Your flyspeed has been set to, %amount%"
-commands.hat: "You have equipped %item% to your head area"
-commands.extinguish: "&cYour inner demon has calmed down"
-commands.extinguish-target: "You have been extinguished by, %sender%"
+  annoy: "&4&l&oANNOYANCE"
+  argh: "&bArghhh, Piratey treasure awaits at yee spawn!"
+  head-slot-taken: "&cYou already have something on your head!"
+  pony: "%PonyPerson% &rsays: %Random_Pony%" #Sorry not sorry pickle, but i'm bringing it back, just for you, <3
+  pony-person: "PickleGodLordOmegaLul"
+  walkspeed: "Your walkspeed has been set to, %amount%"
+  flyspeed: "Your flyspeed has been set to, %amount%"
+  hat: "You have equipped %item% to your head area"
+  extinguish: "&cYour inner demon has calmed down"
+  extinguish-target: "You have been extinguished by, %sender%"
 
 #Warp
-warp.created: "Warp \"%name%\" has been created."
-warp.deleted: "Warp was deleted."
-warp.toggled: "This warp is now %enabled%"
-warp.failure-disabled: "This warp is disabled."
-warp.other-failure: "%player% could not be warped, reason: %reason%"
-warp.teleport-success-other: "%player% was successfully teleported to %warp%"
-warp.permission: "The permission for this warp is: %permission%"
-warp.permission-edited: "The permission for this warp has been updated"
-warp.null-permission: "This warp has no permission set"
-warp.whitelist: "Warp whitelist has been %enabled%."
-warp.blacklist: "Warp blacklist has been %enabled%."
-warp.access-denied: "You may not access this warp!"
-warp.whitelist-player: "%player% has been %operation% to the whitelist."
-warp.blacklist-player: "%player% has been %operation% to the blacklist."
-warp.unsafe: "That warp is not safe!"
-warp.list-header: "Warps:"
-warp.list-element-header: "  %warp%"
-warp.list-element-info: "     Name: %name%, Permission: %permission%, Location: %location%, Enabled: %enabled%"
-warp.private-list-header: "Private Warps: "
-warp.private-list-element-header: "  %warp%"
-warp.private-list-element-info: "     Name: %name%, Owner: %owner%, Location: %location%, Enabled: %enabled%"
+warp:
+  created: "Warp \"%name%\" has been created."
+  deleted: "Warp was deleted."
+  toggled: "This warp is now %enabled%"
+  failure-disabled: "This warp is disabled."
+  other-failure: "%player% could not be warped, reason: %reason%"
+  teleport-success-other: "%player% was successfully teleported to %warp%"
+  permission: "The permission for this warp is: %permission%"
+  permission-edited: "The permission for this warp has been updated"
+  null-permission: "This warp has no permission set"
+  whitelist: "Warp whitelist has been %enabled%."
+  blacklist: "Warp blacklist has been %enabled%."
+  access-denied: "You may not access this warp!"
+  whitelist-player: "%player% has been %operation% to the whitelist."
+  blacklist-player: "%player% has been %operation% to the blacklist."
+  unsafe: "That warp is not safe!"
+  list-header: "Warps:"
+  list-element-header: "  %warp%"
+  list-element-info: "     Name: %name%, Permission: %permission%, Location: %location%, Enabled: %enabled%"
+  private-list-header: "Private Warps: "
+  private-list-element-header: "  %warp%"
+  private-list-element-info: "     Name: %name%, Owner: %owner%, Location: %location%, Enabled: %enabled%"
 
 # Links
-links.discord: "&bCome &3join &bour &3discord &bat &3https://discord.com/invite/nY5yFhs"
-links.forums: "&aVisit our forums at: &bhttps://forums.xiav.icu"
-links.twitter: "Check out our twitter at: https://twitter.com/XiavicNetwork"
-links.website: "&eOur Website&c: &bhttps://xiav.icu"
-links.youtube: "Our amazing Youtube Channel: https://www.youtube.com/channel/UCzl5jhb9JRDnwjIylvo92ww"
+links:
+  discord: "&bCome &3join &bour &3discord &bat &3https://discord.com/invite/nY5yFhs"
+  forums: "&aVisit our forums at: &bhttps://forums.xiav.icu"
+  twitter: "Check out our twitter at: https://twitter.com/XiavicNetwork"
+  website: "&eOur Website&c: &bhttps://xiav.icu"
+  youtube: "Our amazing Youtube Channel: https://www.youtube.com/channel/UCzl5jhb9JRDnwjIylvo92ww"
