--- a/XiavicEssentials/src/main/resources/plugin.yml
+++ b/XiavicEssentials/src/main/resources/plugin.yml
@@ -50,6 +50,9 @@ commands:
   rtp:
     usage: /rtp
     description: Randomly teleports you within a defined area.
+  goto:
+    usage: /goto
+    description: Goto a Player.
   argh:
     usage: /argh
     description: Piratey Treasure.
