--- a/XiavicEssentials/pom.xml
+++ b/XiavicEssentials/pom.xml
@@ -122,6 +122,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>19.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>net.kyori</groupId>
             <artifactId>adventure-text-minimessage</artifactId>
             <version>3.0.0-SNAPSHOT
@@ -166,7 +172,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
         <dependency>
             <groupId>com.github.xiavic</groupId>
             <artifactId>XiavicLib</artifactId>
